--- a/style.css
+++ b/style.css
@@ -17,3 +17,28 @@ body{
   bottom: 0;
   background-image:url(./img/cactus.png);
 }
+
+.game-over{
+  text-align: center;
+  color: #666666;
+  margin-top: 50px;font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+@keyframes slideright{
+  from{
+    background-position: 70000%;
+  }
+  to{
+    background-position: 0;
+  }
+}
+
+.background{
+  position: absolute;
+  bottom: 0;
+  background-image: url(./img/background.png);
+  background-repeat: repeat-x;
+  animation: slideright 600s infinite linear;
+  width: 100%;
+  height: 200px;
+}
