--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body{
 .game-over{
   text-align: center;
   color: #666666;
-  margin-top: 50px;font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  margin-top: 50px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 @keyframes slideright{
@@ -29,7 +30,7 @@ body{
     background-position: 70000%;
   }
   to{
-    background-position: 0;
+    background-position: 0%;
   }
 }
 
